--- a/3模型评估.md
+++ b/3模型评估.md
@@ -2,19 +2,25 @@
 
 如何评估学习算法，自动选择模型？
 
-模型选择&交叉验证测试集的训练方法
+### 模型选择&交叉验证测试集的训练方法
+![image](https://github.com/Young-Allen/Machine-Learning-Andrew-Ng-2022/assets/87413789/a2f3e444-274c-4631-85db-a5c8f9cb91b6)
+
 
 因为d也是一个需要学习的参数，不断选择d的过程本质上和学习模型内参数w,b是一致的，而超参数d本就是靠在test集上测试找到的，而test集在这里就成为参数d的“训练集”，所以这样得出的d是过拟合的
 
 简而言之  Training set 用来 选 w&b, cross validation用来选 d , Test set 用来评估 模型 最终的 泛化误差 - 就是这个模型好不好
+![image](https://github.com/Young-Allen/Machine-Learning-Andrew-Ng-2022/assets/87413789/dca08343-09ae-4e8a-a1a2-f59c6fc05dba)
 
-训练集：得到模型，得到每个模型的w，b
-验证集:挑选模型，挑选某一个模型 
-测试集：评估挑选的模型的泛化能力
+
+**训练集**：得到模型，得到每个模型的w，b
+
+**交叉验证集**：挑选模型，挑选某一个模型 
+
+**测试集**：评估挑选的模型的泛化能力
 
 只有在你想出一个模型作为你的最终模型之后，才可以在测试集上对其进行评估，并且因为你没有使用测试集做出任何决定，这可以确保你的测试集是公平的而不是过度的对您的模型对新数据的泛化能力的乐观估计
 
-选择几个模型进行训练，然后用交叉验证集对几个模型进行损失值评估，以此选出最好的模型，再通过测试集新数据评估该模型泛化误差
+**选择几个模型进行训练，然后用交叉验证集对几个模型进行损失值评估，以此选出最好的模型，再通过测试集新数据评估该模型泛化误差**
 
 
 
